# hello-streamlit

./: README.md  pyproject.toml  requirements.txt
src/hello_streamlit/: streamlit_app.py
