[project]
name = "hello-streamlit"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "lizheng", email = "li.zheng.fd@gmail.com"},
]
dependencies = [
    "streamlit>=1.26.0",
    "openai>=1.14.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
proxy = [
    "httpx[socks]>=0.27.0",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.3.4",
]
dev = [
    "watchdog>=4.0.0",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
select = ["F", "E", "W", "C90", "I", "UP", "PL"]
ignore = []
mccabe.max-complexity = 8

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
preview = true
